adicionando informações no referêncial teórico

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -121,6 +121,60 @@ address = {USA},
 	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
 }
 
+@article{hausmann2000,
+	Author = {M. Hausmann and D. Slabbekoorn and SHM Van Goozen },
+	Title = {Sex hormones affect spatial abilities during the menstrual cycle},
+	Year = {2000},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@article{Rosenberg2002,
+	Author = {L. Rosenberg and S. Park},
+	Title = {Verbal and spatial functions across the menstrual cycle in healthy young women},
+	Year = {2002},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@article{derntl2013,
+	Author = {B. Derntl and R. L. Hack and I. Kryspin-Exner and U. Habel},
+	Title = {Association of menstrual cycle phase with the core components of empathy},
+	Year = {2013},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+@article{obrien2011,
+	Author = {P. O’Brien and M. Backstrom and T. Brown and C. Dennerstein and L. Endicott and J.Epperson,},
+	Title = {Towards a consensus on diagnostic criteria, measurement and trial design of the premenstrual disorders: the ISPMD Montreal consensus},
+	Year = {2011},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+@article{mishell2005,
+	Author = {DR Mishell},
+	Title = {Premenstrual disorders: Epidemiology and disease burden},
+	Year = {2005},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@article{biggs2011,
+	Author = {WS Biggs AND RH Demuth},
+	Title = {Premenstrual syndrome and premenstrual dysphoric disorder},
+	Year = {2011},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@article{bobadilla2013,
+	Author = {J. Bobadilla and F. Ortega and A. Hernando and A. Gutiérrez},
+	Title = {Recommender systems survey},
+	Year = {2013},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@book{ACOG2000,
+author = {ACOG},
+title = {American College of Obstetrics and Gynecology: ACOG},
+year = {2000},
+publisher = {ACOG},
+address = {Washington,DC},
+}
 @book{guyton2012,
 author = {A. C. Guyton and J. E. Hall},
 title = {Tratado de Fisiologia médica},
