--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -2,11 +2,13 @@
 
 \section{Contextualização}
 
-O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931}, e esse objeto de estudo ainda intriga muitos cientistas da medicina, psicologia e a sociedade em geral. Com o avanço da ciência e da medicina, métodos cada vez mais sofisticados e acessíveis para análise hormonal possibilitaram o avanço dos estudos.
+O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa problemas na metodolodia. Com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muios cientistas da medicina, psicologia e a sociedade em geral.
+
+Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo\cite{becker2005}. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário. Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
+
+Tendo como teoria que os hormônios podem influênciar a vida das mulheres, muitos estudos têm sido realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas como, habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
 
 O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 e 35 dias \cite{lenton1984a} e começa a ser contabilizado a partir do primeiro dia da menstruação. O ciclo é dividido principalmente em 2 fases, a fase folicular e a fase lútea \cite{brondin2008}.
-
-Estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário \cite{becker2005}. Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
 
 A fase folicular é contabilizada a partir do promeiro dia da menstruação até o dia de pico do hormônio luteinizante(LH). Há uma diminuição significativa do comprimento da fase folicular de acordo com a idade das mulheres. Normalmente mulheres de 18 a 24 anos tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}. Em mulheres jovens a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}.
 
@@ -16,15 +18,9 @@ Agora na fase lútea, a progesterona no estágio da ovulação é necessária pa
 
 O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o sistema límbico \cite{gruber2002, brinton2008}.
 
-Tendo como teoria que os hormônios podem influênciar a vida das mulheres, muitos estudos têm sido realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, motora e emocional das mulheres. \citeonline{poroma2014} realizaram um levantamento da literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas como, habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais .
+ No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, dos 23 autores estudados, cinco relataram uma melhora nas habilidades no início da fase folicular e três relataram uma melhora nas habilidades quando o estradiol estava baixo(fase folicular), o restante não relatou nenhum efeito da fase. Em tarefas verbais, dos 13 autores estudados, dois relataram uma melhora no meio da fase lútea, 1 relatou melhora em mulheres que utilizam anticoncepcional(AC) e dois relataram melhora no final da fase folicular e no final da fase lútea. No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão no inicio e no fim da fase folicular \cite{dernl2013}, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
 
-Na parte de habilidade espacial visual, dos 23 autores estudados, cinco relataram uma melhora nas habilidades no início da fase folicular e três relataram uma melhora nas habilidades quando o estradiol estava baixo(fase folicular), o restante não relatou nenhum efeito da fase.
-
-Em tarefas verbais, dos 13 autores estudados, dois relataram uma melhora no meio da fase lútea, 1 relatou melhora em mulheres que utilizam anticoncepcional(AC) e dois relataram melhora no final da fase folicular e no final da fase lútea.
-
-No aspecto emocional, varios estudos relacionaram a fase com a habilidade de reconhecimento facial e indicaram uma melhor precisão no inicio e no fim da fase folicular \cite{gasbarri2008} e uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{derntl2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
-
-Já nos aspectos emocionais e comportamental, nos estudo de Rosa e Mainardes levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros.
+Já nos aspectos emocionais e comportamental, no estudo de Rosa e Mainardes levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros.
 
 Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como então adiquirir o conhecimento do que é influênciado? porque adiquirir esse conhecimento seria importante? e como utilizar essa influência para benefício próprio?
 
@@ -48,6 +44,8 @@ Atualmente, existem muitos aplicativos no mercado que estão voltados para a que
 Outra problemática é que apesar do avanço, relativamente poucas descobertas que relacionam a influência hormonal, do ciclo menstrual, na emoção, comportamento e cognição, surgiram como conclusivas \cite{poroma2014}, e que relatam o impacto dessa influência na vida pessoal das mulheres. Portanto esse estudo também trará um levantamento e pesquisa própria sobre as influências do ciclo menstrual relatadas por um grupo de mulheres em idade reprodutiva.
 
 Para ajudar as mulheres a notar padrões, atencipar mudanças, maximixar o auto-conhecimento, a inteligência emocional e a produtividade pesssoal, esse estudo propõe a realização de um aplicativo com um sistema de recomendação com caráter informativo, que dará, de acordo com o perfil e o ciclo menstrual individual de cada mulher, indicações de tarefas que seriam mais difíceis ou mais fáceis de serem realizadas no período do ciclo que a mulher se encontra e o porque disto.
+
+
 
 \section{Objetivos}
 
