--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -8,16 +8,15 @@ Neste capítulo, são apresentadas as bases teóricas para a elaboração do apl
 
 O ciclo menstrual é um fenômeno biológico que ocorre em mulheres saudáveis na qual a carecterística nótavel é o fluxo sanguíneo vaginal\cite{guyton2012}. Ele é ciclico e ocorre como resultado direto de variações das concentrações hormonais secretadas pelo eixo hipotálamo-hipófise-gonadal. Estudos sugerem que essas flutuações hormonais, principalmente de estrogênio e progesterôna, que ocorrem no decorrer do ciclo, podem influenciar as emoções, comportamento e cognição das mulheres \cite{poroma2014}, afetando diretamente o seu dia-a-dia, como por exemplo, a performance nas tarefas cotidianas ou relacionamentos interpessoais.
 
-O ciclo ideal tem como base 28 dias e por convenção o primeiro dia de menstruação é a marca do início do ciclo e a marca do final do ciclo anterior, caso não tenha ocorrido a gravidez. O ciclo pode ser dividido em duas fases, a fase folícular e a fase lútea, o períoodo da menstruação está presente no início da fase folícular e o período da ovulação está situada entre as duas fases. Mais informações sobre as fases, quanto tempo elas duram, quais hormônios atuam, e a influência deles nas mulheres, serão pontuadas nas subseções seguintes. 
+O ciclo ideal tem como base 28 dias e por convenção o primeiro dia de menstruação é a marca do início do ciclo e a marca do final do ciclo anterior, caso não tenha ocorrido a gravidez \cite{lenton1984a}. O ciclo pode ser dividido em duas fases, a fase folícular e a fase lútea \cite{brondin2008}, o período da menstruação está presente no início da fase folícular e o período da ovulação está situada entre as duas fases. Mais informações sobre as fases, quanto tempo elas duram, quais hormônios atuam, e a influência deles nas mulheres, serão pontuadas nas subseções seguintes. 
 
- 
 \subsection{Fase Folicular}
 
-A fase folicular é a primeira fase do ciclo menstrual, começa com o inicio da menstruação e termina com a ovulação. Enquanto ocorre a menstruação e os hormônios estimulante dos ovários(principalmente FSH) estão em concentração baixa, a fase é referida como fase folicular inicial.
+A fase folicular é a primeira fase do ciclo menstrual, começa com o inicio da menstruação e termina com a ovulação. Enquanto ocorre a menstruação e os hormônios estimulante dos ovários(principalmente FSH) estão em concentração baixa, a fase é referida como fase folicular inicial\cite{lenton1984a}.
 
 Essa é a fase responsável pelo desenvolvimento de folículos dos quais um será selecionado e se transformará em um óvulo(corpos lutem) e dará início a ovulação. Os folículos se desenvolvem em resposta ao aumento do hormônio folícul-estimulante (FSH)\lq\lq (Fig. \ref{fig01})  e assim que um deles é selecionado, o FSH diminui gradativamente e progressivamente a produção de estrogénios começão a aumentar. Os estrogénios produzidos pelo folículo em crescimento são responsáveis também pelo desenvolvimento do endométrio e essa fase é normalmente referido como fase folicular tardia.
 
-Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}, o que indica a diminuição progressiva do tamanho da fase folicular com o avanço da idade. Em mulheres jovens a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}. Ciclos inrregulares também costumam ser pela variação no tamanho da fase folicular, enquanto a fase lútea segue normalmente com tamanho fixo de 14 dias. Então, em um ciclo de 28 dias a fase folicular tem 14 dias e em um ciclo de 30 ele teria 16 dias.
+Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}, o que indica a diminuição progressiva do tamanho da fase folicular com o avanço da idade. Em mulheres jovens, a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}. Ciclos inrregulares também costumam ser pela variação no tamanho da fase folicular, enquanto a fase lútea segue normalmente com tamanho fixo de 14 dias. Então, em um ciclo de 28 dias a fase folicular tem 14 dias e em um ciclo de 30 ele teria 16 dias.
 
 \begin{figure}[h]
 	\centering
@@ -26,19 +25,14 @@ Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comp
         \label{fig01}
 \end{figure}
 
-Ápos passar a menstruação, mulheres relataram sentir alterações de humor, comportamentais e sintomas físicos. Esses sintomas variam entre melhoras na pele e no cabelo,perca de peso, diminuição na sensação de inchaço, diminuição ou aumento na líbido, humor mais estável, autoestima elevada, sensação de liberdade, resistência a dor,  aumento na confiança, animação, foco, inspiração e na comunicação.
+Alguns estudos demonstraram que no domínio cognitivo, as funções verbais, espaciais e de memória variam ao longo do ciclo menstrual. Na fase folícular, ou quando há baixos níveis de estradiol, uma melhora no desempenho em tarefas espaciais foi relatada \cite{hausmann2000} e uma melhora nas habilidades verbais foi identificada no final da fase folicular quando há altos níveis de estradiol \cite{Rosenberg2002}. No aspecto emocional, alguns estudos relacionaram a fase com um aumento na habilidade de reconhecimento facial de emoçoes \cite{derntl2013}.
 
-Na realização de atividades, algumas relataram que atividades como realizar atividade física, atividades ao ar livre, trabalho em equipe, reuniões, estudar, atividades domésticas e começar projetos novos costumam ser mais fáceis nessa fase. Não foram relatadas nenhuma difículdade em realizar outras tarefas.
 
 \subsubsection{Menstruação}
 
-A menstruação marca o início do ciclo menstrual e o fim do ciclo anterior e é caracterizada pelo fluxo sanguíneo vaginal. Ocorre quando não há fecundação no ciclo anterior e é composta por sangue e tecido uterino derivado da descamação das paredes internas do útero(endométrio). Normalmente dura cerca de 5 dias, mas pode variar demulher para mulher.
+A menstruação marca o início do ciclo menstrual e o fim do ciclo anterior e é caracterizada pelo fluxo sanguíneo vaginal. Ocorre quando não há fecundação no ciclo anterior e é composta por sangue e tecido uterino derivado da descamação das paredes internas do útero(endométrio). Normalmente dura cerca de 5 dias, mas pode variar demulher para mulherl\cite{guyton2012}.
 
 O fluxo do sangramento também varia muito, mas costuma ser mais intenso nos primeiros dias. O fluxo menstrual pode ser leve, moderado ou intenso.
-
-Algumas mulheres relatam sentir alterações de humor, comportamentais e sintomas físicos durante a menstruação. Esses sintomas variam entre cólica, surgimento de espinhas, sensação de inchaço, retenção de líquido, seios doloridos, cansaço, inrritabilidade, indisposição, ansiosidade, fácil alteração de humor, dores no corpo, dores de cabeça, alterações no sono, estresse e baixa ou alta líbido.
-
-Na realização de atividades, algumas relataram que atividade como exercícios físicos, lidar como pessoas, ir a faculdade, trabalhar e atividades presenciais se tornam mais difíceis de serem realizadas, enquanto tarefas como, dormir, ler e exercer atividade individuais, se tornam mais fáceis. Atividades como assistir filmes e séries, estudar e realizar atividades domésticas foram citadas nas duas categorias.
 
 \subsection{Ovulação}
 
@@ -46,19 +40,23 @@ A ovulação em si não é uma fase, propriamente dita, mas quando referida como
 
 A ovulação acontece pelo equilíbrio entre vários hormonios. Clinicamente é possível determinar o ciclo ovulatório pelo surgimento do LH e a secreção de progesterona da fase lútea \cite{fritz2010}.Quando o estradiol chega ao pico, de 12 a 14 horas depois o LH surge e de 10 a 12 horas depois, faz com que o ovócito complete a sua maturação, rompendo o folículo e sendo libertado na cavidade abnominal onde se dirige à trompa de Falópio \cite{fritz2010}. A subida do LH é o que determina o início da fase lútea.
 
-Como através de um aplicativo não é possível medir o aparecimento do LH para determinar o fim da fase folicular e o início da ovulação e a ovulação é estimada através de uma janela então a ovulação e a fase folicular acabarão se sobrepondo nesse estudo.
-
-A detecção da ovulação costuma ser difícil, mas algumas mulheres relatam sentir alterações de humor, comportamentais e sintomas físicos durante a ovulação. Esses sintomas variam entre aumento na líbido, fisgadas ou dores no abdômen perto do ovário, mais disposição para trabalhar e estudar, aumento nos seios, melhora na pele ou aparições de espinhas.
-
-Na realização de atividades, algumas relataram que atividade como trabalhar, estudar e socializar. Se concentrar e realizar atividades físicas foram citadas nas categorias mais fáceis ou mais difíceis.
+Como através de um aplicativo não é possível medir o aparecimento do LH para determinar o fim da fase folicular e o início da ovulação e a ovulação é estimada através de uma janela, então a ovulação e a fase folicular acabarão se sobrepondo nesse estudo.
 
 \subsection{Fase Lútea}
 
 Com o evento da ovulação, o folículo se transforma em um corpo lúteo e as células das paredes do folículo começam a produção de progesterona para preparar o endométrio para a chegada do óvulo no caso de concepção. O pico da progesterona se dá normalmente por volta do vigésimo primeiro dia do ciclo \cite{nikas2003}. Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, continuando assim o ciclo.
 
-A fase lútea tem duração de 14 dias e costuma ser constante nas mulheres, sem grande variação, mesmo que o tamanho do ciclo varie.É comum no final dessa fase, no período que antecede a menstruação, a aparição da tensão pré menstrual.
+A fase lútea tem duração de 14 dias e costuma ser constante nas mulheres, sem grande variação, mesmo que o tamanho do ciclo varie. É comum no final da fase lútea o aparecimeno do transtorno disfórico pré-menstrual(TPM), que também ifluência significativamente os aspectos emocionais e comportamental durante as fases do ciclo menstrual. Esse transtorno será mais detalhado na sessão ...
 
-\subsubsection{Tensão Pré Menstrual}
+Alguns estudos demonstraram que no domínio cognitivo, as funções verbais, espaciais e de memória variam ao longo do ciclo menstrual. Na fase Lútea uma melhora no desempenho em tarefas verbais e memoriais foi relatada \cite{hausmann2000} e no aspecto emocional, existe uma piora na precisão do reconhecimento de emoçoes faciais, principalmente para emoções negativas, e existe um aumento na memoria emocional, principalmente a recordação de itens negativos ou detalhes periféricos. As mulheres tendem a responder mais rapidamente a situações tristes e estressantes ou expressões faciais tristes. Relatou-se que quando os níveis de progesterona estão altos as mulheres demonstram uma maior tendência a perceber expressões de medo. Também há evidências que o corisol, hormonio do stress, parece se elevar na fase lútea\cite{kirschbaum1999}.
+
+\subsubsection{Tensão pré menstrual e o Transtorno Disfórico Pré Menstrual}
+
+Cerca de 90\% das mulheres em idade reprodutiva experienciam algum tipo de sintoma pré-menstrual. Uma menor parcela atende aos critérios da tensão pré-menstrual(TPM) e cerca de 10\% são diagnosticadas com o transtorno disfórico pré menstrual \cite{mishell2005}. Os sintomas pré-menstruais são caracterizados com uma lista de sintomas físicos, cognitivos, afetivos e comportamental que ocorrem ciclicamente e aparecem durate a fase lútea \cite{obrien2011}, de uma a duas semanas antes da menstruação. 
+
+Os sintomas da TPM variam entem depressão, inrritabilidade, ansiedade, explosões de raiva, retraimento social, sensibilidade mamária, inchaço abdominal, dores de cabeça, entre outros. Mais de 200 sintomas são ligados a essa sindrome. De acordo com o boletim da ACOG, a tpm pode ser diagnosticada se um ou mais desses sinomas forem reportados cinco dias antes do início da menstruação durante três ciclos menstruais. Os sintomas devem ser registrados por pelo menos dois ciclos e devem passar dentro de 4 dias após o início da menstruação e retornar apenas depois do 12 dia do ciclo \cite{ACOG2000}.
+
+Não existe um teste laboratórial expecífico que pode ser utilizada para diagnóstico da sindrome, mas a organização mundial da saude utiliza o ICD-9 código 635.4 para caracterizar a TPM e a TDPM. Não existe separação no diagnóstico entre a TPM e a TDPM \cite{biggs2011}.
 
 \subsection{Método Baseado em Calendário}
 
@@ -77,15 +75,54 @@ Como normalmente a diferença de tamanho dos ciclos se dá por um aumento no tam
         \label{fig02}
 \end{figure}
 
-\subsection{Influências no ciclo menstrual}
+\subsection{Outros fatores que influênciam no ciclo menstrual}
+
+Existem alguns outros fatores que provocam mudanças no ciclo menstrual natural da mulher. Nessa seção destacaremos os metodos contraceptivos hormonais e disturbios hormonais.
 
 \subsubsection{Métodos Contraceptivos}
 
 \subsubsection{Disturbios hormonais}
 
-\section{Perfil das mulheres}
-
 \section{Sistema de Recomendação}
+
+Os sistemas de recomendação (SR) coletam informações sobre as preferências de seus usuários para um conjunto de itens, como livros, filmes, músicas, memes, aplicativos, entre outros \cite{bobadilla2013}. Com o grande número de informações disponível na internet, o SR veio ajudar os usuários a lidarem com esse execesso, fornecendo recomendações baseadas na informações coletadas, equilibrando fatores como precisão, novidade, disperção e estabilidade.
+
+Os SRs baseiam-se na maneira pela qual os seres humanos normalmente tomaram as decisões ao longo da história. Utilizando não só das experiências próprias, mas também baseando nossas decisões nas experiências e conhecimentos de pessoas conhecidas.
+
+As informações podem ser adquiridas de maneira explicita, por meio de coletas de classificações dos usuários ou implicitamente, normalmente monitorando o comportamento dos usuários. Eles também usam de recursos demográficos dos usuários, como idade, nacionalidade e sexo, informações sociais, como seguidores, postagens, seguidos ou informações coletavadas através da internet das coisas, como localização, gps, rfig, sinais de saúde em tempo real e outras coisa.
+
+Os SRs são implementados e possuem literatura para áreas de diferentes temas, como música, televisão, livros, documentos, elearning, e-comerce, aplicações em mercados, pesquisa na web e filmes. A maioria dos estudos estão focados para recomendação de filmes.
+
+De acordo com \citeonline{bobadilla2013} os sistemas de recomendação acompanham a evolução da web e tem três fases,a primeira fase da web tradicional, a segunda da web social e a terceira da internet das coisas. A primeira geração de sistemas de recomendação usava de sites tradicionais para coletar informações de três fontes como dados baseados em conteúdo de produtos comprados ou usados, dados demográficos coletados nos registros dos usuários, dados baseados em memória e coletados das preferências de itens dos usuários. A segunda geração, veio com a web 2.0 reunindo informações sociais e a terceira geração usará a web 3.0 através de informações fornecidas pelos dispositivos integrados na internet, além do gps para localização, como dispositivos de batimento cardiaco, RFID, ou outros parâmetros locais como temperatura e pressão.
+
+Os primeiros sistemas de recomendação focavam em melhorar a precisão da recomendação através da filtragem. A maioria dos metodos e algorítimos baseados em memória, como o KNN, metodo de agregação, decomposição do valor singular, métodos baseado em difusão, entre outros, foram desenvolvidos e melhorados nesse contexto. Na primeira fase, com a abordagem híbriga utilizando a filtragem de conteúdo colaborativo-demográfica e colaborativo, ocorreu a melhora na qualidade das recomendações. Na segunda fase algorítimos que incluiam informações das redes sociais, como o algoritmos de confiança, abordagens sociais adaptativas, análise de redes sociais, entre outros, foram adaptados e desenvolvidos. Atualmente, o algorítimos hibrídos incorporam informações de localização em algoritmos de recomendações ja existentes. 
+
+A avaliação das previsões e recomendações evoluiu bastante desde as origens dos SR, que tinham grandes erros de previsão.
+
+
+\subsection{Fundamentos}
+
+\subsubsection{Filtragem baseada em conteúdo}
+
+\subsubsection{Filtragem demográfica}
+
+\subsubsection{Filtragem colaborativa}
+
+\subsubsection{Filtragem hybrida}
+
+\subsubsection{O problema do começo frio}
+
 
 \section{Considerações Finais do Capítulo}
 
+%Na pesqusa realizada, ápos passar a menstruação, mulheres relataram sentir alterações de humor, comportamentais e sintomas físicos. Esses sintomas variam entre melhoras na pele e no cabelo, perca de peso, diminuição na sensação de inchaço, diminuição ou aumento na líbido, humor mais estável, autoestima elevada, sensação de liberdade, resistência a dor, aumento na confiança, animação, foco, inspiração e na comunicação.
+
+%Na realização de atividades, algumas relataram que atividades como realizar atividade física, atividades ao ar livre, trabalho em equipe, reuniões, estudar, atividades domésticas e começar projetos novos costumam ser mais fáceis nessa fase. Não foram relatadas nenhuma difículdade em realizar outras tarefas.
+
+%Na pesquisa, algumas mulheres relatam sentir alterações de humor, comportamentais e sintomas físicos durante a menstruação. Esses sintomas variam entre cólica, surgimento de espinhas, sensação de inchaço, retenção de líquido, seios doloridos, cansaço, inrritabilidade, indisposição, ansiosidade, fácil alteração de humor, dores no corpo, dores de cabeça, alterações no sono, estresse e baixa ou alta líbido.
+
+%Na realização de atividades, algumas relataram que atividade como exercícios físicos, lidar como pessoas, ir a faculdade, trabalhar e atividades presenciais se tornam mais difíceis de serem realizadas, enquanto tarefas como, dormir, ler e exercer atividade individuais, se tornam mais fáceis. Atividades como assistir filmes e séries, estudar e realizar atividades domésticas foram citadas nas duas categorias.
+
+%A detecção da ovulação costuma ser difícil, mas na pesquisa algumas mulheres relataram sentir alterações de humor, comportamentais e sintomas físicos durante a ovulação. Esses sintomas variam entre aumento na líbido, fisgadas ou dores no abdômen perto do ovário, mais disposição para trabalhar e estudar, aumento nos seios, melhora na pele ou aparições de espinhas.
+
+%Na realização de atividades, algumas relataram que atividade como trabalhar, estudar e socializar ficam mais fáceis de serem realizadas. Se concentrar e realizar atividades físicas foram citadas nas categorias mais fáceis ou mais difíceis.
