adc informações no referencial teorico, suporte tecnologico e retirando o modo de imprimir frente e verso

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -168,6 +168,22 @@ address = {USA},
 	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
 }
 
+
+@article{adomavicius2005,
+	Author = {G. Adomavicius and A. Tuzhilin},
+	Title = {Toward the Next Generation of Recommender Systems: A Survey of the State-of-the-Art and Possible Extensions},
+	Year = {2005},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+
+@article{felferning2008,
+	Author = {A. Felfernig and R. Burke},
+	Title = {Constraint-based Recommender Systems: Technologies and Research Issues},
+	Year = {2008},
+	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
+}
+ 
+
 @book{ACOG2000,
 author = {ACOG},
 title = {American College of Obstetrics and Gynecology: ACOG},
