--- a/template-tcc1/editaveis/consideracoes.tex
+++ b/template-tcc1/editaveis/consideracoes.tex
@@ -4,9 +4,14 @@
 
 \subsection{Flutter}
 
-\subsection{Dart}
+O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código.Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código.
 
-\subsection{back}
+
+Ele é composto por um SDK(Software Development Kit) e um frameword. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação
+
+\subsubsection{Dart}
+
+Dart é a linguagem de programação utilizada no flutter e também foi criada pela Google em 2011. É uma linguagem focada para desenvolvimento front-end e do tipo orientada a objeto.
 
 \section{Engenharia de Software}
 
