--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -85,20 +85,16 @@ Existem alguns outros fatores que provocam mudanças no ciclo menstrual natural 
 
 \section{Sistema de Recomendação}
 
-Os sistemas de recomendação (SR) coletam informações sobre as preferências de seus usuários para um conjunto de itens, como livros, filmes, músicas, memes, aplicativos, entre outros \cite{bobadilla2013}. Com o grande número de informações disponível na internet, o SR veio ajudar os usuários a lidarem com esse execesso, fornecendo recomendações baseadas na informações coletadas, equilibrando fatores como precisão, novidade, disperção e estabilidade.
+Os sistemas de recomendação(SR) tiveram início nos meados dos anos 90 quano os primeiros trabalhos sobre filragem colaborativa(FC) apareceram \cite{felferning2008} e evoluiu graças a academia que continuou desenvolvendo novas abordagens. Ainda é uma área de grande interesse por causa da grande quantidade de problemas que a envolve e por sua praticidade em lidar com o grande número de informação disponível na inernete \cite{adomavicius2005}. O SR veio ajudar os usuários a lidarem com esse execesso, fornecendo recomendações personalisadas baseadas na informações coletadas, equilibrando fatores como precisão, novidade, disperção e estabilidade\cite{bobadilla2013} .
 
-Os SRs baseiam-se na maneira pela qual os seres humanos normalmente tomaram as decisões ao longo da história. Utilizando não só das experiências próprias, mas também baseando nossas decisões nas experiências e conhecimentos de pessoas conhecidas.
+Os SRs são implementados e possuem literatura para áreas de diferentes temas, como música, televisão, livros, documentos, elearning, e-comerce, aplicações em mercados, pesquisa na web e filmes. A maioria dos estudos estão focados para recomendação de filmes \cite{bobadilla2013}.
 
-As informações podem ser adquiridas de maneira explicita, por meio de coletas de classificações dos usuários ou implicitamente, normalmente monitorando o comportamento dos usuários. Eles também usam de recursos demográficos dos usuários, como idade, nacionalidade e sexo, informações sociais, como seguidores, postagens, seguidos ou informações coletavadas através da internet das coisas, como localização, gps, rfig, sinais de saúde em tempo real e outras coisa.
+Os sistemas de recomendação (SR) coletam informações sobre as preferências de seus usuários para um conjunto de itens (livros, filmes, músicas, memes, aplicativos, entre outros) e usam de recursos demográficos dos usuários (idade, nacionalidade e sexo), informações sociais (seguidores, postagens, seguidos) ou informações coletavadas através da internet das coisas(localização, gps, rfig, sinais de saúde em tempo real e outras coisa). Essas informações podem ser adquiridas de maneira explicita, por meio de classificações dos usuários ou implicitamente \cite{bobadilla2013}. 
 
-Os SRs são implementados e possuem literatura para áreas de diferentes temas, como música, televisão, livros, documentos, elearning, e-comerce, aplicações em mercados, pesquisa na web e filmes. A maioria dos estudos estão focados para recomendação de filmes.
 
-De acordo com \citeonline{bobadilla2013} os sistemas de recomendação acompanham a evolução da web e tem três fases,a primeira fase da web tradicional, a segunda da web social e a terceira da internet das coisas. A primeira geração de sistemas de recomendação usava de sites tradicionais para coletar informações de três fontes como dados baseados em conteúdo de produtos comprados ou usados, dados demográficos coletados nos registros dos usuários, dados baseados em memória e coletados das preferências de itens dos usuários. A segunda geração, veio com a web 2.0 reunindo informações sociais e a terceira geração usará a web 3.0 através de informações fornecidas pelos dispositivos integrados na internet, além do gps para localização, como dispositivos de batimento cardiaco, RFID, ou outros parâmetros locais como temperatura e pressão.
+De acordo com \citeonline{bobadilla2013} os sistemas de recomendação acompanham a evolução da web. A evolução da web é constituida de tês fases, a web tradicional, a web social e a inernet das coisas. Na primeira fase, a geração de sistemas de recomendação usava de sites tradicionais para coletar informações de três fonte, dados baseados em conteúdo de produtos comprados ou usados, dados demográficos coletados nos registros dos usuários e dados baseados em memória coletados das preferências de itens dos usuários. A segunda geração, veio com a web 2.0 reunindo informações sociais e a terceira geração usa a web 3.0 através de informações fornecidas pelos dispositivos integrados na internet(internet das coisas).
 
 Os primeiros sistemas de recomendação focavam em melhorar a precisão da recomendação através da filtragem. A maioria dos metodos e algorítimos baseados em memória, como o KNN, metodo de agregação, decomposição do valor singular, métodos baseado em difusão, entre outros, foram desenvolvidos e melhorados nesse contexto. Na primeira fase, com a abordagem híbriga utilizando a filtragem de conteúdo colaborativo-demográfica e colaborativo, ocorreu a melhora na qualidade das recomendações. Na segunda fase algorítimos que incluiam informações das redes sociais, como o algoritmos de confiança, abordagens sociais adaptativas, análise de redes sociais, entre outros, foram adaptados e desenvolvidos. Atualmente, o algorítimos hibrídos incorporam informações de localização em algoritmos de recomendações ja existentes. 
-
-A avaliação das previsões e recomendações evoluiu bastante desde as origens dos SR, que tinham grandes erros de previsão.
-
 
 \subsection{Fundamentos}
 
